--- a/flaskr/templates/generate_users.html
+++ b/flaskr/templates/generate_users.html
@@ -9,9 +9,10 @@
 {% for name in list_users %}
       <li>
           {{name}}
+          {{email}}
       </li>
 {% endfor %}
 </ol>
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
