--- a/flaskr/templates/requirements.html
+++ b/flaskr/templates/requirements.html
@@ -13,5 +13,5 @@
     {% endfor %}
 </ol>
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
