--- a/flaskr/templates/tracks_genre.html
+++ b/flaskr/templates/tracks_genre.html
@@ -15,5 +15,5 @@
 <p>{{title[0]}}</p>
 {% endfor %}
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
