--- a/flaskr/templates/tracks_statistics.html
+++ b/flaskr/templates/tracks_statistics.html
@@ -12,7 +12,6 @@
     <p>The sum of tracks length:</p>
     {{ val[1] }} sec
 {% endfor %}
-</p>
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
