--- a/flaskr/templates/mean.html
+++ b/flaskr/templates/mean.html
@@ -8,5 +8,5 @@
 <p>Average height in cm: {{mhc}}</p>
 <p>Average weight in kg: {{mwk}}</p>
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
