--- a/flaskr/templates/names.html
+++ b/flaskr/templates/names.html
@@ -11,5 +11,5 @@
 <p>{{name[0]}}</p>
 {% endfor %}
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
