--- a/flaskr/templates/tracks_len.html
+++ b/flaskr/templates/tracks_len.html
@@ -12,5 +12,5 @@
     {% endfor %}
 </p>
 
-<a href="{{ url_for('main.root_page')}}">Root page</a>
+<a href="{{ url_for('hw_app.learning_flask')}}">Home page</a>
 {% endblock %}
